Add proper user model and update openapi docs
